<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item android:id="@+id/action_get_data"
        android:title="@string/get_data"
        android:orderInCategory="100"
        app:showAsAction="always"/>

    <item android:id="@+id/action_post_data"
        android:title="@string/post_data"
        android:icon="@android:drawable/ic_menu_add"
        android:orderInCategory="120"
        app:showAsAction="always"/>

    <item android:id="@+id/action_put_data"
        android:title="@string/put_data"
        android:icon="@android:drawable/ic_menu_edit"
        android:orderInCategory="130"
        app:showAsAction="always"/>

    <item android:id="@+id/action_delete_data"
        android:title="@string/delete_data"
        android:icon="@android:drawable/ic_menu_delete"
        android:orderInCategory="140"
        app:showAsAction="always"/>

    <item android:id="@+id/action_delete_bogus"
        android:title="@string/delete_data_bogus"
        android:icon="@android:drawable/ic_menu_delete"
        android:orderInCategory="150"
        app:showAsAction="always"/>

    <!-- TODO #7 - New menu item: Upload Image of Pluto -->
    <item android:id="@+id/action_post_data_binary"
        android:title="@string/post_data_binary"
        android:icon="@android:drawable/ic_menu_add"
        android:orderInCategory="160"
        app:showAsAction="always"/>

</menu>